2003-02-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-rect.c (sp_rect_rx_set): Set ::set value(s)
	(sp_rect_ry_set): Ditto

	* src/sp-item.c (sp_item_update): Set arena item transform here

	* src/dialogs/fill-style.c (sp_fill_style_widget_update_repr): Made non-recursive
	(sp_fill_style_widget_update): Ditto

	* src/sp-shape.c (sp_shape_write_transform): Working path tranformation optimizer

	* src/widgets/sp-color-slider.c (sp_color_slider_adjustment_value_changed): Add
	some extra pixels around arrow dirtified area
	(sp_color_slider_paint): Use gtk_draw_box instead of gtk_draw_shadow
	(sp_color_slider_realize): Attach style

2003-02-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sodipodi.c (sodipodi_load_config): Generic method by Bryce
	(sodipodi_load_preferences): Frontend, same
	(sodipodi_load_extensions): Ditto
	(sodipodi_get_repr): Test for "extensions"
	(sodipodi_init_config): Generic method by Bryce
	(sodipodi_init_preferences): Frontend by Bryce
	(sodipodi_init_extensions): Ditto

	* src/toolbox.c (sp_toolbox_extension_create): Implemented by Bryce

	* src/extension.c: New file by Bryce Harrington

	* src/extension.h: New file by Bryce Harrington

	* src/extensions-skeleton.h: Ditto

	* src/sp-mask.c: support maskContentUnits

	* src/nodepath.c (create_curve): Do not add 50 to y (why was it here?)

	* src/sp-item-group.c (sp_group_update): Propagate only if update flag set

	* src/sp-item.c (sp_item_set): Set clippath and mask bbox
	(sp_item_update): Ditto

	* src/sp-clippath.c (sp_clippath_build): Implement
	(sp_clippath_set): Ditto, clipPathUnits attribute
	(sp_clippath_update): Ditto
	(sp_clippath_show): Use bbox if needed
	(sp_clippath_set_bbox): New method

2003-02-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item.c (sp_item_release): Release mask
	(sp_item_mask_release): New handler
	(sp_item_mask_modified): Ditto
	(sp_item_set): Parse mask
	(sp_item_show): Show mask
	(sp_item_private_hide): Hide mask
