@@ -19,7 +19,6 @@
 #include <time.h>
 #include <libnr/nr-pixops.h>
 #include <glib.h>
-#include <libart_lgpl/art_affine.h>
 #include <gtk/gtksignal.h>
 #include <gtk/gtkhbox.h>
 #include <gtk/gtklabel.h>
