@@ -15,7 +15,6 @@
 #include <config.h>
 #include <string.h>
 #include <glib.h>
-#include <libart_lgpl/art_affine.h>
 #include <gtk/gtkmenuitem.h>
 #include <gtk/gtksignal.h>
 #include "display/nr-arena-group.h"
