@@ -13,7 +13,6 @@
  */
 
 #include <string.h>
-#include <libart_lgpl/art_affine.h>
 #include "svg/svg.h"
 #include "display/nr-arena-group.h"
 #include "attributes.h"
